testing/errors/expressionnotstring2.a
	*=$1000
	!sl 4.5	; -> "Expression did not return a string."
